--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <h2>Market Crash Predictor</h2>
     <p>Horacio Ballinas<br/>Developing Data Projects Course Project</p>
   </hgroup>
+    <a href="https://github.com/hballinas/Developing-Data-Products/Week_4/zipball/gh-pages" class="example">
+     Download
+    </a>
   <article></article>  
 </slide>
     
